--- a/UIViewController_life_cycle/Base.lproj/Main.storyboard
+++ b/UIViewController_life_cycle/Base.lproj/Main.storyboard
@@ -1,24 +1,151 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HMG-jg-mDU">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="UIViewController_life_cycle" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First Page" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zq7-31-PRD">
+                                <rect key="frame" x="92" y="251" width="209" height="60"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="88y-hk-IxV">
+                                <rect key="frame" x="129.66666666666669" y="583" width="133.66666666666669" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Present Modal"/>
+                                <connections>
+                                    <segue destination="5c2-fR-hTX" kind="presentation" id="4nW-gC-f7R"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wh6-84-zgJ">
+                                <rect key="frame" x="104" y="672" width="185" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Navigation Controller"/>
+                                <connections>
+                                    <segue destination="tha-PD-tcq" kind="show" id="gBh-2c-Ax3"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Zq7-31-PRD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1gY-zQ-Wyf"/>
+                            <constraint firstItem="88y-hk-IxV" firstAttribute="top" secondItem="Zq7-31-PRD" secondAttribute="bottom" constant="272" id="60A-Ph-8Ec"/>
+                            <constraint firstItem="Wh6-84-zgJ" firstAttribute="top" secondItem="88y-hk-IxV" secondAttribute="bottom" constant="54" id="M9c-hT-Sks"/>
+                            <constraint firstItem="88y-hk-IxV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="O2s-QS-epX"/>
+                            <constraint firstItem="Zq7-31-PRD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="148" id="lXE-bd-bHO"/>
+                            <constraint firstItem="Wh6-84-zgJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="z30-Hu-xRu"/>
+                        </constraints>
                     </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="x0D-4c-cpL"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="2826.7175572519081" y="-2.1126760563380285"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="tA4-a9-HaZ">
+            <objects>
+                <viewController id="tha-PD-tcq" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="L5P-0O-BMr">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Navigation Controller" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tty-SN-dMe">
+                                <rect key="frame" x="60.666666666666657" y="260" width="272" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="TPy-dH-3db"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Tty-SN-dMe" firstAttribute="top" secondItem="TPy-dH-3db" secondAttribute="top" constant="157" id="Q64-8P-T9e"/>
+                            <constraint firstItem="Tty-SN-dMe" firstAttribute="centerX" secondItem="L5P-0O-BMr" secondAttribute="centerX" id="wQb-5B-LYj"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="wQj-IC-iUH"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="37w-EF-30H" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4365.6488549618316" y="246.47887323943664"/>
+        </scene>
+        <!--View Controller Two-->
+        <scene sceneID="Jef-Ss-DK0">
+            <objects>
+                <viewController id="5c2-fR-hTX" customClass="ViewControllerTwo" customModule="UIViewController_life_cycle" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BVv-wl-HXE">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Present Modal" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GQB-h7-c4i">
+                                <rect key="frame" x="44" y="203" width="305" height="60"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ymG-jf-JSh">
+                                <rect key="frame" x="165.66666666666666" y="451" width="61.666666666666657" height="34.333333333333314"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Back"/>
+                                <connections>
+                                    <action selector="back:" destination="5c2-fR-hTX" eventType="touchUpInside" id="aFy-jz-cS7"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Jcj-pX-sed"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="GQB-h7-c4i" firstAttribute="centerX" secondItem="BVv-wl-HXE" secondAttribute="centerX" id="6ut-px-giz"/>
+                            <constraint firstItem="GQB-h7-c4i" firstAttribute="top" secondItem="Jcj-pX-sed" secondAttribute="top" constant="144" id="L6X-4Q-vMR"/>
+                            <constraint firstItem="ymG-jf-JSh" firstAttribute="top" secondItem="GQB-h7-c4i" secondAttribute="bottom" constant="188" id="VeT-Nk-OaT"/>
+                            <constraint firstItem="ymG-jf-JSh" firstAttribute="centerX" secondItem="BVv-wl-HXE" secondAttribute="centerX" id="kxd-EW-OqT"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OwF-33-iYq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4366" y="-476"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="RFd-Fw-Z9s">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HMG-jg-mDU" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="PQn-XJ-yV7"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="yH9-og-uoa">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="MRg-9V-TOI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yXR-sl-twI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1900" y="-2.1126760563380285"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
